# test-plan-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: project-memory.instructions.md
.github/workflows/: ci.yml
data/: test_templates.md
docs/: apresentacao.md  gitflow.md  guia-geral-prompt.md  prompts.md
docs/assets/: apresentacao-flow.mmd  apresentacao-overview.mmd
examples/input/: historia-ambigua.txt  historia-incompleta.txt  historia-valida.md  historia-valida.txt
examples/output/: plano-historia-ambigua.md  plano-historia-incompleta.md  plano-historia-valida.md
src/test_plan_agent/: __init__.py  cli.py  graph.py  llm.py  prompts.py  state.py  tools.py  validators.py
tests/: test_setup.py
